# local-rag

./: .gitignore  AGENT_CONTEXT.md  MASTERPLAN.md  Makefile  PLAN.md  PLANNING.md  PLANNING_BACKUP.md  PRD.md  README.md  SITUATION.md  SOP-DAILY-OPERATIONS.md  TASK.md  TEST_PLAN.md  TEST_RESULTS.md  TREE.md  project_tree_at_3.1.md  requirements-test-del.txt  run_tests-del.py  test_phase1.py  test_phase32.py
agentic-rag-knowledge-graph/: .gitignore  CLAUDE.md  Dockerfile  SETUP.md  TASK.md  pyproject.toml  test_connections.py
agentic-rag-knowledge-graph/agent/: api.py  models.py
agentic-rag-knowledge-graph/agentic-bak/: .env.template  .gitignore  PLANNING.md  test_graphiti_setup.py
agentic-rag-knowledge-graph/agentic-bak/agent/: db_utils.py
docs/: README.md  SERVICES_REGISTRY.md  SYSTEM_ARCHITECTURE.md
docs/archive/: PHASE_3.2_HANDOFF.md  discovery_findings.md  openwebui_config_analysis.md
docs/operations/: FLEXIBLE_TESTING.md  MANUAL_VALIDATION.md  TEST_PLAN.md
docs/project/: PLAN.md  TASK.md
local-ai-packaged/: .gitignore  Caddyfile  docker-compose.override.private.yml  docker-compose.yml
tests/: test_api_streaming.py  test_config.py  test_master_validation.py  test_report_20250805_231107.json  test_report_20250805_233206.json  test_report_20250806_093157.json  test_report_20250806_093326.json  test_report_20250806_094243.json  test_system_health.py  test_user_interface.py
